[gd_scene load_steps=6 format=3 uid="uid://colwrskcwv6ei"]

[ext_resource type="Script" path="res://Scripts/Player1_deck.gd" id="1_hj6tn"]
[ext_resource type="Script" path="res://Scripts/Player2_deck.gd" id="2_ihism"]
[ext_resource type="Script" path="res://Scripts/Game_logic.gd" id="3_3n61g"]
[ext_resource type="Script" path="res://Scripts/Deckbase.gd" id="4_w4mh2"]

[sub_resource type="GDScript" id="GDScript_e1avg"]
script/source = "extends Node2D

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


"

[node name="Main" type="Node2D"]
script = SubResource("GDScript_e1avg")

[node name="Player1" type="Node2D" parent="."]

[node name="Player1_deck" type="Node" parent="Player1"]
script = ExtResource("1_hj6tn")

[node name="Player1_hand" type="Node" parent="Player1"]

[node name="Player2" type="Node2D" parent="."]

[node name="Player2_deck" type="Node" parent="Player2"]
script = ExtResource("2_ihism")

[node name="Player2_hand" type="Node" parent="Player2"]

[node name="Game_logic" type="Node" parent="."]
script = ExtResource("3_3n61g")

[node name="Deckbase" type="Node" parent="."]
script = ExtResource("4_w4mh2")
